2003-09-14  Scott Dattalo  <scott@dattalo.com>
 	* src/gpsim_time.h - changed cycle counter break point from a Singly linked
	list to a doubly linked list. This is in preparation for separating module
	time from pic processor time so that when the PIC goes to sleep, time 
	doesn't stop.
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/p16f62x.h - duplicate declaration of intcon register
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/breakpoints.cc - this time the 'Too many cycle counter breakpoints' was
	fixed. BTW the problem was that 'clear_break' was not putting the cleared
	breakpoint back into the 'inactive' list
	
2003-09-07  Scott Dattalo  <scott@dattalo.com>
	* src/pic_processor.cc -- Fixed the "Too many cycle counter breakpoints" bug
	* src/interface.cc        It turns out that the "realtime" stuff was 
	* src/breakpoints.cc      1) duplicating a class declaration. 2) not clearing
	* src/breakpoints.h       cycle counter break points.
	* gpsim.sln - added for win32 port.
	
2003-08-30  Scott Dattalo  <scott@dattalo.com>
	* src/p12x.cc -- The 12c5xx will reset if an I/O is toggled and the processor
	is sleeping.

2003-08-27  Scott Dattalo  <scott@dattalo.com>
	* config_win32.h.in - added

2003-08-25  Scott Dattalo  <scott@dattalo.com>
	* src/ioports.cc - more 16f628 Port A fixes
	
2003-08-19  Scott Dattalo  <scott@dattalo.com>
	* eXdbm/parse.c - "char" is used to store result of fgetc, but
			EOF doesn't fit in the default unsigned chars.
	* src/cod.cc - an endian issue which made symbol values come out wrong.
		- note these fixes came from a patch attached to an anonymous  bug report
	
2003-08-18  Scott Dattalo  <scott@dattalo.com>
	* src/ioports.cc - Port A on the F62x devices was named "ioport"
	* src/p16f62x.cc - intcon was not declared at 0x8b (bug 566165)
	* regression/p16f628.asm  - Added a regression test for the f68
	* regression/p16f628.stc

2003-08-17  Scott Dattalo  <scott@dattalo.com>