@@ -14,8 +14,8 @@ dnl     LDFLAGS="$LDFLAGS -L$with_exdbm/lib"])
 AC_CANONICAL_SYSTEM
 
 GPSIM_MAJOR_VERSION=0
-GPSIM_MINOR_VERSION=20
-GPSIM_MICRO_VERSION=15
+GPSIM_MINOR_VERSION=21
+GPSIM_MICRO_VERSION=0
 GPSIM_VERSION=$GPSIM_MAJOR_VERSION.$GPSIM_MINOR_VERSION.$GPSIM_MICRO_VERSION
 
 AM_INIT_AUTOMAKE(gpsim, $GPSIM_VERSION)
