@@ -58,7 +58,6 @@ public:
 
   guint64 value;          // Current value of the cycle counter.
   guint64 break_on_this;  // If there's a pending cycle break point, then it'll be this
-  guint64 time_step;      // Amount of "real time" for each cycle
 
   bool reassigned;        // Set true when a break point is reassigned (or deleted)
 
@@ -83,7 +82,7 @@ public:
       // Increment the current cycle then check if
       // we have a break point set here
 
-      value += time_step;
+      value++;
 
       if(value >= break_on_this)
 	{
